--- a/config/boards/shields/AroundForty-RB/AroundForty-RB_R.conf
+++ b/config/boards/shields/AroundForty-RB/AroundForty-RB_R.conf
@@ -58,3 +58,7 @@ CONFIG_BT_CTLR_PHY_2M=n
 
 CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=y
 
+# ADD eager debboucing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=3
+
