--- a/config/boards/shields/AroundForty-RB/AroundForty-RB_L.conf
+++ b/config/boards/shields/AroundForty-RB/AroundForty-RB_L.conf
@@ -21,3 +21,7 @@ CONFIG_INPUT_THREAD_STACK_SIZE=2048
 CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
 CONFIG_BT_CTLR_PHY_2M=n
+
+# ADD eager debboucing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=3
